Changed nuspec title to match id

--- a/MarkdownSharp/StackExchange.MarkdownSharp.nuspec
+++ b/MarkdownSharp/StackExchange.MarkdownSharp.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>StackExchange.MarkdownSharp</id>
     <version>$version$</version>
-    <title>$title$</title>
+    <title>StackExchange.MarkdownSharp</title>
     <authors>balpha, wumpus1, jrummell</authors>
     <owners>Stack Exchange</owners>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
